[package]
name = "iracing-teleport"
version = "0.1.0"
edition = "2024"

[dependencies]
lz4 = "1.24.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
windows = { version = "0.61.1", features = [
    "Win32_Foundation", 
    "Win32_System_Memory", 
    "Win32_System_Threading", 
    "Win32_Security"
] }
